# TempAndHumSens

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  server_flowchart.drawio  webapp_flowchart.drawio
main/: BT_Handler.c  BT_Handler.h  CMakeLists.txt  NVS_Handler.c  NVS_Handler.h  SHTC3.c  SHTC3.h  battery_monitor.c  battery_monitor.h  blufi.h  blufi_example.h  blufi_init.c  blufi_security.c  definitions.h  http_client.c  http_client.h  main.c  shtc3_lib.c  shtc3_lib.h  time_sync.c  time_sync.h  wifi_client.c  wifi_client.h
