idf_component_register(SRCS "main.c"
                            "blufi_security.c"
                            "blufi_init.c"
                            "shtc3_lib.c"
                           	"http_client.c"
                           	"time_sync.c"
                           	"wifi_client.c"
                           	"battery_monitor.c"
                    INCLUDE_DIRS ".")
