idf_component_register(SRCS "main.c"
                            "blufi_security.c"
                            "blufi_init.c"
                            "shtc3_lib.c"
                           	"http_client.c"
                           	"wifi_client.c"
                           	"battery_monitor.c"
                           	"NVS_Handler.c"
                           	"BT_Handler.c"
                    INCLUDE_DIRS ".")
